--- a/TransUnion/Base.lproj/Main.storyboard
+++ b/TransUnion/Base.lproj/Main.storyboard
@@ -8,8 +8,10 @@
     <customFonts key="customFonts">
         <mutableArray key="IntroSemiBold.ttf">
             <string>IntroSemiBold</string>
+            <string>IntroSemiBold</string>
         </mutableArray>
         <mutableArray key="IntroSemiBoldCaps.ttf">
+            <string>IntroSemiBoldCaps</string>
             <string>IntroSemiBoldCaps</string>
             <string>IntroSemiBoldCaps</string>
         </mutableArray>
@@ -26,14 +28,81 @@
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EsH-Wg-OV5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Progress1" translatesAutoresizingMaskIntoConstraints="NO" id="Ffh-aD-36o">
+                                        <rect key="frame" x="103" y="9" width="282" height="32"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJj-LQ-p2y">
+                                        <rect key="frame" x="8" y="11" width="18" height="28"/>
+                                        <state key="normal" image="Pause"/>
+                                        <connections>
+                                            <action selector="pauseButtonAction:" destination="BV1-FR-VrT" eventType="touchUpInside" id="5Ia-SY-B7g"/>
+                                        </connections>
+                                    </button>
+                                    <webView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KaW-Co-jgK">
+                                        <rect key="frame" x="510" y="0.0" width="90" height="90"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="90" id="B4c-Od-8JE"/>
+                                            <constraint firstAttribute="width" constant="90" id="cOd-50-m2w"/>
+                                        </constraints>
+                                    </webView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="-$9999999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Nz-24G">
+                                        <rect key="frame" x="372" y="33" width="127" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="127" id="bf8-pP-MNL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="IntroSemiBold" family="Intro" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$9999999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A0r-eq-lJu">
+                                        <rect key="frame" x="383" y="8" width="116" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="116" id="i5f-Bw-G0j"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="IntroSemiBoldCaps" family="Intro" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="A0r-eq-lJu" firstAttribute="top" secondItem="EsH-Wg-OV5" secondAttribute="top" constant="8" id="1wf-f1-3BU"/>
+                                    <constraint firstItem="KaW-Co-jgK" firstAttribute="top" secondItem="EsH-Wg-OV5" secondAttribute="top" id="2pk-K2-y0n"/>
+                                    <constraint firstItem="MJj-LQ-p2y" firstAttribute="leading" secondItem="EsH-Wg-OV5" secondAttribute="leading" constant="8" id="6ib-wL-zvf"/>
+                                    <constraint firstItem="Ffh-aD-36o" firstAttribute="leading" secondItem="MJj-LQ-p2y" secondAttribute="trailing" constant="77" id="8m3-s5-aIm"/>
+                                    <constraint firstAttribute="height" constant="50" id="GP3-De-Tov"/>
+                                    <constraint firstItem="T2c-Nz-24G" firstAttribute="trailing" secondItem="A0r-eq-lJu" secondAttribute="trailing" id="IpE-a2-gNn"/>
+                                    <constraint firstItem="MJj-LQ-p2y" firstAttribute="centerY" secondItem="EsH-Wg-OV5" secondAttribute="centerY" id="K6u-wk-ooc"/>
+                                    <constraint firstItem="KaW-Co-jgK" firstAttribute="leading" secondItem="A0r-eq-lJu" secondAttribute="trailing" constant="11" id="QPp-Pt-KZt"/>
+                                    <constraint firstAttribute="trailing" secondItem="KaW-Co-jgK" secondAttribute="trailing" id="ZdU-bi-03f"/>
+                                    <constraint firstItem="Ffh-aD-36o" firstAttribute="centerY" secondItem="EsH-Wg-OV5" secondAttribute="centerY" id="d5q-IX-1HT"/>
+                                    <constraint firstItem="T2c-Nz-24G" firstAttribute="top" secondItem="A0r-eq-lJu" secondAttribute="bottom" constant="4" id="nTh-8v-YZd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="EsH-Wg-OV5" secondAttribute="trailing" constant="-20" id="502-8q-NT7"/>
+                            <constraint firstItem="EsH-Wg-OV5" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leadingMargin" constant="-20" id="68j-Dt-uN8"/>
+                            <constraint firstItem="EsH-Wg-OV5" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="topMargin" id="Scv-Hf-t0h"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="debtLabel" destination="T2c-Nz-24G" id="TFU-vf-6Jr"/>
+                        <outlet property="displayView" destination="EsH-Wg-OV5" id="eU2-Nr-Pjw"/>
+                        <outlet property="earningsLabel" destination="A0r-eq-lJu" id="oB9-Fb-7ys"/>
+                        <outlet property="pauseButton" destination="MJj-LQ-p2y" id="ojt-q4-zXw"/>
+                        <outlet property="progressImage" destination="Ffh-aD-36o" id="YAc-tF-8Tt"/>
+                        <outlet property="scoreView" destination="KaW-Co-jgK" id="fOs-71-QGy"/>
                         <segue destination="ZqL-sP-qnd" kind="show" identifier="toFinalResults" animates="NO" id="UM8-DO-jTs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="417" y="306"/>
         </scene>
         <!--Final Results View Controller-->
         <scene sceneID="6e8-4w-sLj">
@@ -86,10 +155,10 @@
                                             <constraint firstItem="uvM-fM-3FE" firstAttribute="width" secondItem="OK4-Vw-E7z" secondAttribute="width" id="Ue1-eP-di4"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dNL-dW-gfK">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dNL-dW-gfK">
                                         <rect key="frame" x="0.0" y="88" width="100" height="48"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TOTAL DEBT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kj3-Pe-0Dm">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOTAL DEBT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kj3-Pe-0Dm">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="10"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="1w4-lM-nrT"/>
@@ -98,7 +167,7 @@
                                                 <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$750" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P8j-cg-xFz">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$750" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P8j-cg-xFz">
                                                 <rect key="frame" x="0.0" y="18" width="100" height="30"/>
                                                 <fontDescription key="fontDescription" name="IntroSemiBoldCaps" family="Intro" pointSize="30"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -166,4 +235,8 @@
             <point key="canvasLocation" x="1120" y="402"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Pause" width="18" height="28"/>
+        <image name="Progress1" width="282" height="32"/>
+    </resources>
 </document>
